--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/enbase?useSSL=false&serverTimezone=UTC
     username: root
-    password: xxxxxx
+    password: 6327zxt523
   redis:
     host: 192.168.88.130
     port: 6379
-    password: xxx
+    password: zxt
     lettuce:
       pool:
         max-active: 10
