--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
             cd ~/projects/entbase-be
             git pull origin main
             sudo docker compose down
-            sudo docker compose -d --build
+            sudo docker compose up -d --build
