--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,12 @@ spring:
           starttls: #
             enable: true
             required: true
+  servlet:
+    multipart:
+      max-request-size: 2560MB
+      max-file-size: 256MB
 
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
+
