--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,15 +17,15 @@ spring:
         min-idle: 1
         time-between-eviction-runs: 10s
 
-  mail:
+    mail:
     #
     host: smtp.qq.com
     #
     default-encoding: UTF-8
     #
-    username: 2146835742@qq.com
+    username: 3276327856@qq.com
     #
-    password: blktpeinflmvdcii
+    password: snaquydrfzxudaea
 
     properties:
       mail:
