更新 Docker Compose 的 Traefik 设置

--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
       - ./data:/app/data
     restart: always
     labels:
-      - traefik.enable=false
+      - traefik.http.routers.entbase-be.rule=Host(`entbase.dev.mofu.app`) && PathPrefix(`/api`) 
 
   mysql:
     image: mysql:8
