更新 Traefik 中间件配置

--- a/compose.yaml
+++ b/compose.yaml
@@ -16,7 +16,8 @@ services:
     restart: always
     labels:
       - traefik.http.routers.entbase-be.rule=Host(`entbase.dev.mofu.app`) && PathPrefix(`/api`)
-      - traefik.http.middlewares.entbase-be.stripprefix.prefixes=/api
+      - traefik.http.routers.entbase-be.middlewares=entbase-be-strip
+      - traefik.http.middlewares.entbase-be-strip.stripprefix.prefixes=/api
 
   mysql:
     image: mysql:8
